# wwm-code-monitor-dc-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  bahamut_snapshot.json  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: bahamut-snapshot.yml  deploy.yml  ghcr-image.yml
src/wwm_codebot/: __init__.py  bahamut.py  config.py  discord_bot.py  main.py  models.py  snapshot_cli.py  snapshot_io.py  storage.py
src/wwm_codebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bahamut_parser.py
